--- a/rep/Cargo.toml
+++ b/rep/Cargo.toml
@@ -12,7 +12,5 @@ categories = ["data-structures", "development-tools::procedural-macro-helpers", 
 license = "MIT"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-rep-derive = { path = "../rep_derive" }
+rep_derive = "0.1.0"
