--- a/rep_example/Cargo.toml
+++ b/rep_example/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Caleb Winston <calebhwin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-rep_derive = "0.1.0"
+rep = { path = "../rep" }
